--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/http-status": "^0.2.30",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "http-status": "^2.0.0",
     "mongoose": "^8.8.2"
   },
   "devDependencies": {
